--- a/bin/setting.ini
+++ b/bin/setting.ini
@@ -1,16 +1,8 @@
 [setting]
 theme = dark
-<<<<<<< HEAD
-path =
-version = 3.1.0
-barlevel = 0.96
-=======
 path = 
-update_url = https://raw.github.com/zjadzhd/DXY-KITCHEN/main/
-version = 2.2.9
-barlevel = 0.98
-key = DXY-PUBLIC-BETA-KEY
->>>>>>> 0817787c9c3c50d48be9eb9e5ade754cf07ab701
+ai_engine = 1
+version = 3.3.8
+barlevel = 0.90
 oobe = 4
 language = English
-
