--- a/bin/setting.ini
+++ b/bin/setting.ini
@@ -1,8 +1,9 @@
 [setting]
 theme = dark
-path =
-version = 3.1.0
-barlevel = 0.96
+path = 
+ai_engine = 1
+version = 3.3.8
+barlevel = 0.90
 oobe = 4
-language = Chinese-Simplified
+language = English
 
